--- a/pom.xml
+++ b/pom.xml
@@ -16,12 +16,13 @@
         <maven.compiler.source>15</maven.compiler.source>
         <maven.compiler.target>15</maven.compiler.target>
         <junit.version>4.13.1</junit.version>
-        <luqiubase-core.version>4.2.2</luqiubase-core.version>
-        <liquibase-plugin.version>4.2.2</liquibase-plugin.version>
-        <mysql-connector.version>8.0.22</mysql-connector.version>
+<!--        <luqiubase-core.version>4.2.2</luqiubase-core.version>
+        <liquibase-plugin.version>4.2.2</liquibase-plugin.version>-->
+<!--        <mysql-connector.version>8.0.22</mysql-connector.version>-->
         <assertj-core.version>3.18.1</assertj-core.version>
         <mokito-core.version>3.7.7</mokito-core.version>
-        <nokito-all.version>1.10.19</nokito-all.version>
+        <mokito-all.version>1.10.19</mokito-all.version>
+        <jacoco-maven-plugin>0.8.6</jacoco-maven-plugin>
     </properties>
 
     <dependencies>
@@ -44,11 +45,11 @@
             <scope>test</scope>
         </dependency>
 
-        <dependency>
+<!--        <dependency>
             <groupId>org.liquibase</groupId>
             <artifactId>liquibase-core</artifactId>
             <version>${luqiubase-core.version}</version>
-        </dependency>
+        </dependency>-->
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-all</artifactId>
@@ -62,22 +63,22 @@
             <scope>test</scope>
         </dependency>
 
-        <dependency>
-            <groupId>org.liquibase</groupId>
-            <artifactId>liquibase-maven-plugin</artifactId>
-            <version>${liquibase-plugin.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
-            <version>${mysql-connector.version}</version>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.liquibase</groupId>-->
+<!--            <artifactId>liquibase-maven-plugin</artifactId>-->
+<!--            <version>${liquibase-plugin.version}</version>-->
+<!--        </dependency>-->
+<!--        <dependency>-->
+<!--            <groupId>mysql</groupId>-->
+<!--            <artifactId>mysql-connector-java</artifactId>-->
+<!--            <version>${mysql-connector.version}</version>-->
+<!--        </dependency>-->
     </dependencies>
 
     <build>
 
         <plugins>
-            <plugin>
+<!--            <plugin>
                 <groupId>org.liquibase</groupId>
                 <artifactId>liquibase-maven-plugin</artifactId>
                 <version>4.2.2</version>
@@ -97,7 +98,7 @@
                         </goals>
                     </execution>
                 </executions>
-            </plugin>
+            </plugin>-->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -109,7 +110,7 @@
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
-                <version>0.8.6</version>
+                <version>${jacoco-maven-plugin}</version>
                 <executions>
                     <execution>
                         <goals>
