--- a/pom.xml
+++ b/pom.xml
@@ -53,7 +53,7 @@
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-all</artifactId>
-            <version>${nokito-all.version}</version>
+            <version>${mokito-all.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
