--- a/pom.xml
+++ b/pom.xml
@@ -16,16 +16,22 @@
         <maven.compiler.source>15</maven.compiler.source>
         <maven.compiler.target>15</maven.compiler.target>
         <junit.version>4.13.1</junit.version>
-<!--        <luqiubase-core.version>4.2.2</luqiubase-core.version>
-        <liquibase-plugin.version>4.2.2</liquibase-plugin.version>-->
-<!--        <mysql-connector.version>8.0.22</mysql-connector.version>-->
         <assertj-core.version>3.18.1</assertj-core.version>
         <mokito-core.version>3.7.7</mokito-core.version>
         <mokito-all.version>1.10.19</mokito-all.version>
-        <jacoco-maven-plugin>0.8.6</jacoco-maven-plugin>
+        <flyway-core-version>7.5.3</flyway-core-version>
+        <flyway-maven-plugin-version>7.5.3</flyway-maven-plugin-version>
+        <postgresql-version>42.2.18</postgresql-version>
+        <maven-compiler-plugin-version>3.8.1</maven-compiler-plugin-version>
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>${postgresql-version}</version>
+        </dependency>
+
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-core</artifactId>
@@ -37,19 +43,12 @@
             <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
-
         <dependency>
             <groupId>org.assertj</groupId>
             <artifactId>assertj-core</artifactId>
             <version>${assertj-core.version}</version>
             <scope>test</scope>
         </dependency>
-
-<!--        <dependency>
-            <groupId>org.liquibase</groupId>
-            <artifactId>liquibase-core</artifactId>
-            <version>${luqiubase-core.version}</version>
-        </dependency>-->
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-all</artifactId>
@@ -62,71 +61,35 @@
             <version>${mokito-core.version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.flywaydb</groupId>
+            <artifactId>flyway-core</artifactId>
+            <version>${flyway-core-version}</version>
+        </dependency>
 
-<!--        <dependency>-->
-<!--            <groupId>org.liquibase</groupId>-->
-<!--            <artifactId>liquibase-maven-plugin</artifactId>-->
-<!--            <version>${liquibase-plugin.version}</version>-->
-<!--        </dependency>-->
-<!--        <dependency>-->
-<!--            <groupId>mysql</groupId>-->
-<!--            <artifactId>mysql-connector-java</artifactId>-->
-<!--            <version>${mysql-connector.version}</version>-->
-<!--        </dependency>-->
     </dependencies>
 
     <build>
-
         <plugins>
-<!--            <plugin>
-                <groupId>org.liquibase</groupId>
-                <artifactId>liquibase-maven-plugin</artifactId>
-                <version>4.2.2</version>
-                <configuration>
-                    <propertyFileWillOverride>false</propertyFileWillOverride>
-                    <changeLogFile>src/main/resources/db.changelog/db.changelog-master.xml</changeLogFile>
-                    <driver>com.mysql.cj.jdbc.Driver</driver>
-                    <url>jdbc:mysql://localhost:3306/crud_db?serverTimezone=UTC</url>
-                    <username>root</username>
-                    <password>root</password>
-                </configuration>
-                <executions>
-                    <execution>
-                        <phase>process-resources</phase>
-                        <goals>
-                            <goal>update</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>-->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
+                <version>${maven-compiler-plugin-version}</version>
                 <configuration>
                     <source>15</source>
                     <target>15</target>
                 </configuration>
             </plugin>
             <plugin>
-                <groupId>org.jacoco</groupId>
-                <artifactId>jacoco-maven-plugin</artifactId>
-                <version>${jacoco-maven-plugin}</version>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>prepare-agent</goal>
-                        </goals>
-                    </execution>
-                    <execution>
-                        <id>report</id>
-                        <phase>test</phase>
-                        <goals>
-                            <goal>report</goal>
-                        </goals>
-                    </execution>
-                </executions>
+                <groupId>org.flywaydb</groupId>
+                <artifactId>flyway-maven-plugin</artifactId>
+                <version>${flyway-maven-plugin-version}</version>
+                <configuration>
+                    <url>jdbc:postgresql://localhost:5432/crud_db?currentSchema=crud</url>
+                    <user>postgres</user>
+                    <password>root</password>
+                </configuration>
             </plugin>
         </plugins>
-
     </build>
 </project>
