--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,9 @@
 language: java
+jdk: -oraclejdk15
 sudo: false
 
-after_success:
-  - bash <(curl -s https://codecov.io/bash)
+#after_success:
+# - bash <(curl -s https://codecov.io/bash)
 
 nitifications:
   email:
