--- a/pom.xml
+++ b/pom.xml
@@ -13,8 +13,8 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>15</maven.compiler.source>
-        <maven.compiler.target>15</maven.compiler.target>
+        <maven.compiler.source>1.15</maven.compiler.source>
+        <maven.compiler.target>1.15</maven.compiler.target>
         <junit.version>4.13.1</junit.version>
         <assertj-core.version>3.18.1</assertj-core.version>
         <mokito-core.version>3.7.7</mokito-core.version>
@@ -76,8 +76,10 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>${maven-compiler-plugin-version}</version>
                 <configuration>
-                    <source>14</source>
-                    <target>14</target>
+                    <source>${maven.compiler.source}</source>
+                    <target>${maven.compiler.target}</target>
+                    <release>15</release>
+<!--                    <verbose>true</verbose>-->
                 </configuration>
             </plugin>
             <plugin>
